fix full-screen menu z-index and ios scroll

--- a/src/styles/common/burger-menu.scss
+++ b/src/styles/common/burger-menu.scss
@@ -55,7 +55,7 @@
   text-align: center;
   width: 100vw;
   height: 100vh;
-  z-index: 3;
+  z-index: 10;
   opacity: 0;
   transition: all .3s;
   visibility: hidden;
