--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -150,7 +150,7 @@ button {
     border-radius: 20px;
     overflow: hidden;
     background: linear-gradient(#fff, #fff);
-    z-index: 100;
+    z-index: 5;
     &:before {
       content: '';
       background: $gradient;
@@ -161,7 +161,7 @@ button {
       width: 100%;
       height: 100%;
       opacity: 0;
-      z-index: -100;
+      z-index: -5;
       transition: opacity .4s;
     }
   &:hover {
@@ -249,7 +249,9 @@ sup {
 }
 
 .no-scroll {
-  overflow: hidden;
+    overflow: hidden;
+    position: relative;
+    height: 100%;
 }
 .display_none {
     display: none;
