--- a/src/styles/common/price.scss
+++ b/src/styles/common/price.scss
@@ -31,7 +31,7 @@
         padding: 30px 0 60px;
         background: linear-gradient(#fff, #fff);
         position: relative;
-        z-index: 100;
+        z-index: 5;
         &:before {
             content: '';
             background: $gradient;
@@ -42,7 +42,7 @@
             width: 100%;
             height: 100%;
             opacity: 0;
-            z-index: -100;
+            z-index: -5;
             transition: opacity .4s;
         }
     }
